Tokenizer actually flags its errors, and their positions so the editor is alot less buggy. Still some issues with newlines though.